Added a background color for selected payament processing type in backers _create stylesheet partial.  Removed hidden inline style from payment processing type in backers create view.  Refactored payment type title to match refactored payment plugins translations. Added payment type .show() to backers create view JS.  Refactored payment type display to remove hidden CSS attribute.

--- a/app/assets/stylesheets/resources/backers/_create.sass
+++ b/app/assets/stylesheets/resources/backers/_create.sass
@@ -294,8 +294,9 @@
           nav
             a
               background: #6BB544
+
               &.selected
-                background: white
+                background: #5af904
 
         .payment
           .title
