--- a/app/views/projects/backers/create.html.slim
+++ b/app/views/projects/backers/create.html.slim
@@ -54,7 +54,7 @@
                 .bootstrap-twitter
                   = form.submit (@backer.credits ? t('.submit.credits') : t('.submit.moip')), disabled: true, class: 'btn', id: 'user_submit'
 
-        #payment.hide
+        #payment
           .title
             h1= t('.choose_payment')
             h2= t('.choose_payment_subtitle')
@@ -63,9 +63,9 @@
             nav#payment_menu
               - PaymentEngines.engines.each do |engine|
                 = link_to "##{engine[:name]}_payment", id: engine[:name], class: 'selected enabled' , :'data-target' => engine[:review_path].call(@backer) do
-                  = t("projects.backers.review.#{engine[:name]}")
+                  = t("projects.backers.#{engine[:name]}.review.title")
           - PaymentEngines.engines.each do |engine|
-            div[id="#{engine[:name]}_payment" class="payments_type hide"]
+            div[id="#{engine[:name]}_payment" class="payments_type"]
     .clearfix
 = content_for :mouseflow do
   = render 'layouts/mouseflow'
